wseCalculator/style.css
body {
    background: #1e2226;
}

a:hover {
    text-decoration: none;
    outline: none;
}

* {
    transition: 0.3s;
}

.form-group, .table, .form-row, .display-4 {
    color: #fff;
}

.navbar {
    background: #16191c !important;
}

.form-container {
    background: #2a2e33;
    border-radius: 8px;
    border: 5px solid #21262a;
    padding: 15px 35px;
}

.table th, .table td {
    vertical-align: middle;
}

.smaller {
    font-size: 0.85rem !important;
    font-weight: 400 !important;
}

.bottom-margin {
    margin-bottom: 1rem;
}

.bottom-margin-big {
    margin-bottom: 2rem;
}

.top-margin {
    margin-top: 1rem;
}

.left-margin {
    margin-left: 1rem;
}

.btn-outline-secondary:hover, .btn-outline-secondary:not(:disabled):not(.disabled):active, .btn-outline-secondary:not(:disabled):not(.disabled).active, .show > .btn-outline-secondary.dropdown-toggle {
    color: #fff !important;
}

.jumbotron {
    padding: 4rem 2rem;
    background: linear-gradient(rgba(0,0,0,.75), rgba(0,0,0,.75)), url(bg.jpg);
    background-repeat: no-repeat;
    background-size: cover;
}

.nav-item:hover, .navbar-text:hover, .active{
    color: #9bff8a !important
}

.footer {
    position: sticky;
    bottom: 0;
    width: 100%;
    height: 60px;
    display: flex;
    align-items: center;
    border-top: 5px solid #21262a;
    background-color: #16191C;
}

html {
    position: relative;
    min-height: 100%;
}

.display-4 {
    font-size: 32px;
    margin-bottom: 0;
    font-weight: 300;
}

.display-4>span {
    font-weight: 900;
    color: #9bff8a;
}

.lead {
    color: rgba(155, 255, 138, 0.9);
    font-weight: 300;
}

.small {
    font-size: 18px;
    margin-bottom: 0;
    color: rgba(255, 255, 255, .9);
    font-weight: 300;
}

.btnStep {
    padding: 5px 7px;
    border: 1px solid #9bff8a;
}

.btnStep:focus {
    padding: 5px 7px;
    border: 1px solid #9bff8a !important;
}

.btnStep>div>h6 {
    color: #9bff8a;
    margin-bottom: 5px;
}

.btnStep>div {
    color: #9bff8a;
    font-size: 16px;
}

.btnStep:hover {
    border: 1px solid #7af4ff;
    background: #0b2331;
}

.btnStep:hover .btnDiv {
    color: #7af4ff;
}

.btnStep:hover .btnDiv>h6 {
    color: #7af4ff;
}

.btnStep:active {
    background: #0b2331 !important;
    border: 1px solid #7af4ff !important;
}

.btnStep:visited {
    background: #0b2331 !important;
    border: 1px solid #7af4ff !important;
}

.btnStep:active .btnDiv {
    color: #7af4ff;
}

.btnStep:active .btnDiv>h6 {
    color: #7af4ff;
}

textarea:focus, input:focus{
    box-shadow: none !important;
}

*:focus {
    box-shadow: none !important;
}

.form-control {
    border: 0;
    background: rgba(0, 0, 0, .3);
    color: #bababa;
}

.form-control:focus {
    background: rgba(0, 0, 0, .6);
    color: #e7dddd;
}

tr {
    background: none !important;
}

table {
    background: rgba(0, 0, 0, .1);
    border-radius: 5px;
}

.popover {
    border: 0;
    background: none;
    margin-left: 15px;
}

.arrow,
.arrow::before {
    position: absolute;
    width: 14px;
    height: 14px;
    margin-left: 3px;
    z-index: -1;
}

.arrow::before {
    z-index: 2;
    content: '';
    transform: rotate(45deg);
    background: #192026;
}

.popover-body {
    background: #192026;
    color: #eee;
    border-radius: 0 0 10px 10px;
    font-weight: 300;
}

.popover-header {
    border-radius: 10px 10px 0 0;
    background: #0c0f11;
    color: #9bff8a;
    border-bottom: 0;
}

/* checkbox again fml */

.checkbox {
    display: inline-flex;
    cursor: pointer;
    position: relative;
}

.checkbox > span {
    color: #fff;
    padding: 0.25rem;
}

.checkbox > input {
    height: 15px;
    width: 15px;
    border-radius: 250000px;
    -webkit-appearance: none;
    -moz-appearance: none;
    -o-appearance: none;
    appearance: none;
    border: 1px solid #9bff8a;
    outline: none;
    transition-duration: 0.3s;
    background: none;
    cursor: pointer;
    margin-top: .6rem;
}

.checkbox > input:checked {
    border: 1px solid #9bff8a;
    background-color: #9bff8a;
}

.form-check {
    padding-left: 0;
}

.checkBoxForm {
    padding: 5px 20px;
    align-items: center;
}

.checkBoxForm>div {
    display: flex;
    justify-content: flex-start;
    padding: 5px 0;
}

hr {
    height: 1px;
    border: 0;
    background: rgba(255, 255, 255, .1);
}

.checkbox2 {
    display: inline-flex;
    cursor: pointer;
    position: relative;
}

.checkbox2 > span {
    color: #fff;
    padding: 0.25rem;
}

.checkbox2 > input {
    height: 15px;
    width: 15px;
    border-radius: 250000px;
    -webkit-appearance: none;
    -moz-appearance: none;
    -o-appearance: none;
    appearance: none;
    border: 1px solid #9bff8a;
    outline: none;
    transition-duration: 0.3s;
    background: none;
    cursor: pointer;
    margin-top: 9px;
    margin-left: -1rem;
}

.checkbox2 > input:checked {
    border: 1px solid #9bff8a;
    background-color: #9bff8a;
}

.noPadding {
    padding: 0;
}

.btnSubmit {
    background: linear-gradient(-45deg, rgb(26, 175, 123) 0%, rgb(152, 180, 80) 100%);
    font-size: 18px;
    transition: 0.6s;
    padding: 10px 15px;
    border-radius: 7px;
    border: 0 !important;
    outline: 0 !important;
    box-shadow: 0 !important;
}

.btnSubmit:hover {
    filter:hue-rotate(30deg);
    transform: scale(1.1);
}

.nav-item:hover .small>ion-icon {
    color: #9bff8a !important;
}

.contData {
    color: #9bff8a;
    transition: .3s;
}

.contData:hover {
    color: #71e19d;
}

.form-control:disabled {
    background-color: rgb(70, 73, 70)
}

